// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardDefault Keepボタンを押したときにコールバックが呼ばれるか 1`] = `
<div>
  <div
    class="w-96 m-2 p-6 rounded-lg shadow-md bg-white"
    data-testid="color-card"
  >
    <div
      class="flex flex-row items-center justify-between"
    >
      <div
        class="flex flex-row items-center"
      >
        <div
          class="w-16 h-16 rounded-xl border border-gray-200"
          style="background-color: rgb(234, 226, 141);"
        />
        <div
          class="ml-6"
          data-testid="name-label"
        >
          <p
            class="text-xl"
          >
            相葉夕美
          </p>
          <p
            class="text-sm tracking-wide"
          >
            Yumi Aiba
          </p>
        </div>
      </div>
      <button
        class="px-3 py-1 text-center items-center border border-natural-black text-white hover:text-natural-black bg-natural-black hover:bg-natural-white rounded-lg transition-colors inline-flex text-sm "
        data-testid="keep-button"
      >
        <svg
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"
          />
        </svg>
        <span
          class="ml-2 tracking-wide"
        >
          Keep
        </span>
      </button>
    </div>
    <div
      class="mt-6"
    >
      <div
        class="flex flex-row items-center justify-between "
      >
        <label
          class="w-16 py-1 text-center text-sm tracking-wide rounded-lg bg-gray-200"
        >
          RGB
        </label>
        <span
          data-testid="copy-button"
        >
          <label
            class="flex flex-row items-center text-sm tracking-wide cursor-pointer"
            data-tip="クリックでコピー"
          >
            rgb(234, 226, 141)
            <span
              class="ml-2"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="13"
                  rx="2"
                  ry="2"
                  width="13"
                  x="9"
                  y="9"
                />
                <path
                  d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                />
              </svg>
            </span>
          </label>
        </span>
      </div>
      <div
        class="flex flex-row items-center justify-between mt-4"
      >
        <label
          class="w-16 py-1 text-center text-sm tracking-wide rounded-lg bg-gray-200"
        >
          HSV
        </label>
        <span
          data-testid="copy-button"
        >
          <label
            class="flex flex-row items-center text-sm tracking-wide cursor-pointer"
            data-tip="クリックでコピー"
          >
            hsv(55, 40, 92)
            <span
              class="ml-2"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="13"
                  rx="2"
                  ry="2"
                  width="13"
                  x="9"
                  y="9"
                />
                <path
                  d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                />
              </svg>
            </span>
          </label>
        </span>
      </div>
      <div
        class="flex flex-row items-center justify-between mt-4"
      >
        <label
          class="w-16 py-1 text-center text-sm tracking-wide rounded-lg bg-gray-200"
        >
          HEX
        </label>
        <span
          data-testid="copy-button"
        >
          <label
            class="flex flex-row items-center text-sm tracking-wide cursor-pointer"
            data-tip="クリックでコピー"
          >
            #EAE28D
            <span
              class="ml-2"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="13"
                  rx="2"
                  ry="2"
                  width="13"
                  x="9"
                  y="9"
                />
                <path
                  d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                />
              </svg>
            </span>
          </label>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardDefault Removeボタンを押したときにコールバックが呼ばれるか 1`] = `
<div>
  <div
    class="w-96 m-2 p-6 rounded-lg shadow-md bg-white"
    data-testid="color-card"
  >
    <div
      class="flex flex-row items-center justify-between"
    >
      <div
        class="flex flex-row items-center"
      >
        <div
          class="w-16 h-16 rounded-xl border border-gray-200"
          style="background-color: rgb(234, 226, 141);"
        />
        <div
          class="ml-6"
          data-testid="name-label"
        >
          <p
            class="text-xl"
          >
            相葉夕美
          </p>
          <p
            class="text-sm tracking-wide"
          >
            Yumi Aiba
          </p>
        </div>
      </div>
      <button
        class="px-3 py-1 text-center items-center border border-natural-black text-white hover:text-natural-black bg-natural-black hover:bg-natural-white rounded-lg transition-colors inline-flex text-sm "
        data-testid="remove-button"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M7 11v2h10v-2H7zm5-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
        <span
          class="ml-2 tracking-wide"
        >
          Remove
        </span>
      </button>
    </div>
    <div
      class="mt-6"
    >
      <div
        class="flex flex-row items-center justify-between "
      >
        <label
          class="w-16 py-1 text-center text-sm tracking-wide rounded-lg bg-gray-200"
        >
          RGB
        </label>
        <span
          data-testid="copy-button"
        >
          <label
            class="flex flex-row items-center text-sm tracking-wide cursor-pointer"
            data-tip="クリックでコピー"
          >
            rgb(234, 226, 141)
            <span
              class="ml-2"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="13"
                  rx="2"
                  ry="2"
                  width="13"
                  x="9"
                  y="9"
                />
                <path
                  d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                />
              </svg>
            </span>
          </label>
        </span>
      </div>
      <div
        class="flex flex-row items-center justify-between mt-4"
      >
        <label
          class="w-16 py-1 text-center text-sm tracking-wide rounded-lg bg-gray-200"
        >
          HSV
        </label>
        <span
          data-testid="copy-button"
        >
          <label
            class="flex flex-row items-center text-sm tracking-wide cursor-pointer"
            data-tip="クリックでコピー"
          >
            hsv(55, 40, 92)
            <span
              class="ml-2"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="13"
                  rx="2"
                  ry="2"
                  width="13"
                  x="9"
                  y="9"
                />
                <path
                  d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                />
              </svg>
            </span>
          </label>
        </span>
      </div>
      <div
        class="flex flex-row items-center justify-between mt-4"
      >
        <label
          class="w-16 py-1 text-center text-sm tracking-wide rounded-lg bg-gray-200"
        >
          HEX
        </label>
        <span
          data-testid="copy-button"
        >
          <label
            class="flex flex-row items-center text-sm tracking-wide cursor-pointer"
            data-tip="クリックでコピー"
          >
            #EAE28D
            <span
              class="ml-2"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="13"
                  rx="2"
                  ry="2"
                  width="13"
                  x="9"
                  y="9"
                />
                <path
                  d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
                />
              </svg>
            </span>
          </label>
        </span>
      </div>
    </div>
  </div>
</div>
`;
